--- a/views/portfolio/film.ejs
+++ b/views/portfolio/film.ejs
@@ -16,7 +16,7 @@
     <!-- jquery必要引入文件（可用可不用） -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
     <!-- 每個連結通用 -->
     <link rel="stylesheet" href="../css/nav.css">
 </head>
@@ -89,13 +89,72 @@
                     <img src="../media/predictor.jpg" alt="...">
                 </div>
                 <div class="col">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card-body text-end">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">影視動畫組</p>
+
+                        <h1 class="card-title title_right">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">影視動畫組</p>
+
+                        <h1 class="card-title">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+                <div class="col text-end">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                <div class="col">
+                    <div class="card-body text-end">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">影視動畫組</p>
+
+                        <h1 class="card-title title_right">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">影視動畫組</p>
+
+                        <h1 class="card-title">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+                <div class="col text-end">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                
             </div>
         </div>
     </div>
