--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -3,7 +3,7 @@
 h1{
     /* margin: 80px 0; */
     /* border: 2px solid black; */
-    text-align: center;
+    /* text-align: center; */
 }
 p{
     font-size: 18px;
