--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -16,14 +16,12 @@
     <!-- jquery必要引入文件（可用可不用） -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/about.css">
+        <link rel="stylesheet" href="../css/portfolio.css">
     <!-- 每個連結通用 -->
     <link rel="stylesheet" href="../css/nav.css">
 </head>
 
 <body>
-    遊戲
-
     <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -82,6 +80,84 @@
             </div>
         </div>
     </nav>
+
+    <!-- gaming -->
+    <div class="container">
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                <div class="col">
+                    <div class="card-body text-end">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">遊戲組</p>
+
+                        <h1 class="card-title title_right">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">遊戲組</p>
+
+                        <h1 class="card-title">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+                <div class="col-md-6 text-end">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                <div class="col">
+                    <div class="card-body text-end">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">遊戲組</p>
+
+                        <h1 class="card-title title_right">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                        <p class="card-text">遊戲組</p>
+
+                        <h1 class="card-title">作品名稱</h1>
+                        
+                        
+                        <a href="#" class="btn btn-primary">了解詳情</a>
+                    </div>
+                </div>
+                <div class="col text-end">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                
+            </div>
+        </div>
+    </div>
 
     <!-- footer -->
 
