--- a/views/portfolio/interaction.ejs
+++ b/views/portfolio/interaction.ejs
@@ -188,6 +188,6 @@
         </div>
     </div>
 </body>
-<script src="../js/about.js"></script>
+<script src="../js/portfolio.js"></script>
 
 </html>
