--- a/views/portfolio/film.ejs
+++ b/views/portfolio/film.ejs
@@ -93,7 +93,7 @@
                         <p class="card-text"><small class="text-muted">成長 Tone</small></p>
                         <p class="card-text">影視動畫組</p>
 
-                        <h1 class="card-title title_right">作品名稱</h1>
+                        <h1 class="card-title">作品名稱</h1>
                         
                         
                         <a href="#" class="btn btn-primary">了解詳情</a>
@@ -130,7 +130,7 @@
                         <p class="card-text"><small class="text-muted">成長 Tone</small></p>
                         <p class="card-text">影視動畫組</p>
 
-                        <h1 class="card-title title_right">作品名稱</h1>
+                        <h1 class="card-title">作品名稱</h1>
                         
                         
                         <a href="#" class="btn btn-primary">了解詳情</a>
@@ -190,6 +190,6 @@
         </div>
     </div>
 </body>
-<script src="../js/about.js"></script>
+<script src="../js/portfolio.js"></script>
 
 </html>
