--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -16,7 +16,9 @@
     <!-- jquery必要引入文件（可用可不用） -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../css/portfolio.css">
+
+    
+    <link rel="stylesheet" href="../css/portfolio.css">
     <!-- 每個連結通用 -->
     <link rel="stylesheet" href="../css/nav.css">
 </head>
@@ -30,8 +32,8 @@
                 <img src="" alt="" srcset="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -83,81 +85,160 @@
 
     <!-- gaming -->
     <div class="container">
-        <div class="card">
-            <div class="row">
-                <div class="col">
-                    <img src="../media/predictor.jpg" alt="...">
-                </div>
-                <div class="col">
-                    <div class="card-body text-end">
-                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                        <p class="card-text">遊戲組</p>
+        <div class="works">
+            <div class="card">
+                <div class="row">
+                    <div class="col">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+                    <div class="col">
+                        <div class="card-body text-end">
+                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                            <p class="card-text">遊戲組</p>
 
-                        <h1 class="card-title title_right">作品名稱</h1>
-                        
-                        
-                        <a href="#" class="btn btn-primary">了解詳情</a>
+                            <h1 class="card-title">降妖錄</h1>
+
+
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="card-body">
-                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                        <p class="card-text">遊戲組</p>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card-body">
+                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                            <p class="card-text">遊戲組</p>
 
-                        <h1 class="card-title">作品名稱</h1>
-                        
-                        
-                        <a href="#" class="btn btn-primary">了解詳情</a>
-                    </div>
-                </div>
-                <div class="col-md-6 text-end">
-                    <img src="../media/predictor.jpg" alt="...">
-                </div>
-                
-            </div>
-        </div>
-        <div class="card">
-            <div class="row">
-                <div class="col">
-                    <img src="../media/predictor.jpg" alt="...">
-                </div>
-                <div class="col">
-                    <div class="card-body text-end">
-                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                        <p class="card-text">遊戲組</p>
+                            <h1 class="card-title">血墨契約</h1>
 
-                        <h1 class="card-title title_right">作品名稱</h1>
-                        
-                        
-                        <a href="#" class="btn btn-primary">了解詳情</a>
+
+                            <a href="#" class="btn btn-primary">了解詳情</a>
+                        </div>
                     </div>
+                    <div class="col-md-6 text-end">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="row">
-                <div class="col">
-                    <div class="card-body">
-                        <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                        <p class="card-text">遊戲組</p>
+            <div class="card">
+                <div class="row">
+                    <div class="col">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+                    <div class="col">
+                        <div class="card-body text-end">
+                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                            <p class="card-text">遊戲組</p>
 
-                        <h1 class="card-title">作品名稱</h1>
-                        
-                        
-                        <a href="#" class="btn btn-primary">了解詳情</a>
+                            <h1 class="card-title title_right">Raise</h1>
+
+
+                            <a href="#" class="btn btn-primary">了解詳情</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col text-end">
-                    <img src="../media/predictor.jpg" alt="...">
+            </div>
+            <div class="card">
+                <div class="row">
+                    <div class="col">
+                        <div class="card-body">
+                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
+                            <p class="card-text">遊戲組</p>
+
+                            <h1 class="card-title">作品名稱</h1>
+
+
+                            <a href="#" class="btn btn-primary">了解詳情</a>
+                        </div>
+                    </div>
+                    <div class="col text-end">
+                        <img src="../media/predictor.jpg" alt="...">
+                    </div>
+
                 </div>
-                
             </div>
         </div>
+
+        <!-- 了解詳情 -->
+        <div class="works_content">
+            <button type="button" class="btn btn-outline-secondary btn_back">回上一頁</button>
+
+            <div id="gaming_carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#gaming_carousel" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#gaming_carousel" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#gaming_carousel" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../media/test.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/test2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/test3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#gaming_carousel"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#gaming_carousel"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <div class="card">
+                <div class="row">
+                    <div class="col">
+                        <div class="card-body">
+                            <p class="card-text">遊戲組</p>
+
+                            <h1 class="card-title">降妖錄</h1>
+
+                            <p class="card-text">
+                                團隊名稱：無為工作室
+                            </p>
+                            <p class="card-text">
+                                團隊成員：<br>白紀葳、彭奕綾、蔡易辰、<br>江若仙、張舒涵、裴氏瓊如
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-body">
+                            <p class="card-text">
+                                故事發生於妖魔橫行的架空古代，玩家於故事中將扮演一位新手除妖師，於旅途中來到一座村民失蹤事件頻傳的詭異村莊「古嶺村」。
+                                為了釐清事件的真相，主角將遊走於各地進行調查，
+                                努力解開各種謎題讓村莊重歸平靜。
+                                我們的遊戲特色為結合聊齋誌異故事與中國古風元素的劇情體驗、
+                                具有日式漫畫感的美術視覺、
+                                富有巧思且難易適中的機關設計，讓玩家享受破關的成就感。
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
     </div>
+
+
+
+
+
 
     <!-- footer -->
 
@@ -174,7 +255,7 @@
                 <p>
                     主辦單位：<br>元智大學資訊傳播學系
                 <p>
-                
+
             </div>
             <div class="col">
                 <p>
@@ -182,13 +263,13 @@
                     元智大學資訊傳播學系<br>
                     第二十六屆畢業展覽籌備會
                 </p>
-                
+
             </div>
-            
+
         </div>
     </div>
 
 </body>
-<script src="../js/about.js"></script>
+<script src="../js/portfolio.js"></script>
 
 </html>
