--- a/views/portfolio/marketing.ejs
+++ b/views/portfolio/marketing.ejs
@@ -169,6 +169,5 @@
         </div>
     </div>
 </body>
-<script src="../js/about.js"></script>
-
+<script src="../js/portfolio.js"></script>
 </html>
