--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -114,7 +114,7 @@
                             <h1 class="card-title">血墨契約</h1>
 
 
-                            <a href="#" class="btn btn-primary">了解詳情</a>
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
                         </div>
                     </div>
                     <div class="col-md-6 text-end">
@@ -136,7 +136,7 @@
                             <h1 class="card-title title_right">Raise</h1>
 
 
-                            <a href="#" class="btn btn-primary">了解詳情</a>
+                            <a href="#" class="btn btn-primary btn_More">了解詳情</a>
                         </div>
                     </div>
                 </div>
@@ -204,20 +204,21 @@
                         <div class="card-body">
                             <p class="card-text">遊戲組</p>
 
-                            <h1 class="card-title">降妖錄</h1>
+                            <h1 class="card-title content_title"></h1>
 
                             <p class="card-text">
-                                團隊名稱：無為工作室
+                                團隊名稱：<span class="content_teams"></span>
                             </p>
                             <p class="card-text">
-                                團隊成員：<br>白紀葳、彭奕綾、蔡易辰、<br>江若仙、張舒涵、裴氏瓊如
+                                團隊成員：<br>
+                                <span class="content_member"></span>
                             </p>
 
                         </div>
                     </div>
                     <div class="col">
                         <div class="card-body">
-                            <p class="card-text">
+                            <p class="card-text content_txt">
                                 故事發生於妖魔橫行的架空古代，玩家於故事中將扮演一位新手除妖師，於旅途中來到一座村民失蹤事件頻傳的詭異村莊「古嶺村」。
                                 為了釐清事件的真相，主角將遊走於各地進行調查，
                                 努力解開各種謎題讓村莊重歸平靜。
