--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -15,12 +15,20 @@
 .card-title{
     margin: 40px 0 40px;
 }
+
+
 .carousel-inner{
     height: 600px;
 }
+
+
 .btn_back{
     margin: 40px 0 40px;
     border: 0;
+}
+
+.works_content{
+    display: none;
 }
 /* .works_text{
     justify-content: center;
