--- a/views/activity.ejs
+++ b/views/activity.ejs
@@ -83,12 +83,77 @@
         </div>
     </nav>
 
+    <!-- 活動資訊 -->
+
     <div class="container">
-        <div class="row">
-            <div class="col banner">
-                Key Vision
+        <div class="card">
+            <div class="row">
+                <div class="banner">
+                    活動相關照片
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">
+                        <span class="act_title">大型 QRcode</span>
+                    </h1>
+                    <p class="card-text">
+                        活動時間：
+                        <span class="act_date">3/1 至 3/31</span>
+                    </p>
+                    <p class="card-text">
+                        活動地點：
+                        <span class="act_date">五館一樓閱覽室前的空地</span>
+                    </p>
+                    <p class="card-text">
+                        活動內容：<br>
+                        <span class="act_txt">
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                        </span>
+                    </p>
+
+
+                </div>
             </div>
         </div>
+
+        <div class="card">
+            <div class="row">
+                
+                <div class="banner">
+                    活動相關照片
+                </div>
+
+                <div class="card-body">
+                    <h1 class="card-title">
+                        <span class="act_title">排行榜</span>
+                    </h1>
+                    <p class="card-text">
+                        活動時間：
+                        <span class="act_date">5/12 至 5/15</span>
+                    </p>
+                    <p class="card-text">
+                        活動地點：
+                        <span class="act_date">松菸展場攤位</span>
+                    </p>
+                    <p class="card-text">
+                        活動內容：<br>
+                        <span class="act_txt">
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                            活動內容介紹活動內容活動內容介紹活動內容介紹活動內容介紹活動內容介紹
+                        </span>
+                    </p>
+
+
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- footer -->
@@ -120,6 +185,6 @@
         </div>
     </div>
 </body>
-<script src="../js/news.js"></script>
+<script src="../js/activity.js"></script>
 
 </html>
