--- a/public/css/activity.css
+++ b/public/css/activity.css
@@ -1,4 +1,19 @@
 h1{
-    margin: 80px 0;
-    text-align: center;
+    /* margin: 80px 0;
+    text-align: center; */
+}
+.card{
+    padding: 40px;
+    /* 垂直置中 */
+    justify-content: center;    
+  
+}
+.card-title, .card-text{
+    margin: 0px;
+}
+.card-title{
+    margin: 80px 0 80px;
+}
+.card-text{
+    margin: 0 0 40px;
 }
