--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -96,15 +96,80 @@
     </nav>
 
 
-    <!-- 影展宣傳片 -->
+    <!-- 影展內容 -->
 
     <div class="container">
+
+        <!-- 宣傳片 -->
+
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/Iv7juZvsYsE" title="【PAINTNIC】預告02｜元智大學資傳系第25屆畢業展" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe width="100%" height="600 px" src="https://www.youtube.com/embed/Iv7juZvsYsE" title="【PAINTNIC】預告02｜元智大學資傳系第25屆畢業展" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
             </iframe>
-        </div>     
-        
+        </div>
+
+        <!-- 介紹 -->
+
+        <div class="card">
+            <div class="row">
+                <div class="card-body">
+                    <h1 class="card-title">
+                        元智大學資訊傳播學系 <br>
+                        第 26 屆影展 
+                    </h1>
+                    <p id="date">
+                        112 年 04 月 26 日
+                    </p>
+                    <p class="card-text">
+                        介紹內文介紹內文介紹介紹內文介紹內文介紹介紹內文
+                        介紹內文介紹介紹內文介紹內文介紹介紹內文介紹內文
+                        介紹介紹內文介紹內文介紹介紹內文介紹內文介紹內文
+                        介紹內文介紹內文介紹介紹內文介紹內文介紹介紹內文
+                        介紹內文介紹介紹內文介紹內文介紹介紹內文介紹內文
+                        介紹介紹內文
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- 作品介紹 -->
+
+        <div class="card">
+
+            <div class="row">
+                <h2 class="card-title film_title text-center">
+                    影視作品
+                </h2>
+            </div>
+
+            <div class="row row-cols-1 row-cols-sm-3 g-3">
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                           <h5 class="card-title">作品名稱</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                           <h5 class="card-title">作品名稱</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                           <h5 class="card-title">作品名稱</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <!-- footer -->
