--- a/views/news.ejs
+++ b/views/news.ejs
@@ -98,13 +98,12 @@
     <!--  -->
     <div class="container">
         <div class="card">
-            <div class="card-header">
-                標題
-            </div>
+            <div class="card-header">標題 1</div>
             <div class="card-body">
                 <!-- <h5 class="card-title">Special title treatment</h5> -->
                 <p class="card-text">
-                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                    簡述內文1 簡述內文1 簡述內文1 簡述內文1 簡述內文1 
+                    簡述內文1 簡述內文1 簡述內文1
                 </p>
                 <!-- <p class="placeholder-wave">
                 <span class="placeholder col-12"></span>
@@ -117,18 +116,17 @@
                 </button>
             </div>
             <div class="card-footer text-muted">
-                2023-02-30
+                2023.04.01
             </div>
         </div>
 
         <div class="card">
-            <div class="card-header">
-                標題
-            </div>
+            <div class="card-header">標題 2</div>
             <div class="card-body">
                 <!-- <h5 class="card-title">Special title treatment</h5> -->
                 <p class="card-text">
-                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                    簡述內文2 簡述內文2 簡述內文2 簡述內文2 簡述內文2 
+                    簡述內文2 簡述內文2 簡述內文2
                 </p>
                 <!-- <p class="placeholder-wave">
                 <span class="placeholder col-12"></span>
@@ -141,18 +139,17 @@
                 </button>
             </div>
             <div class="card-footer text-muted">
-                2023-02-30
+                2023.03.11
             </div>
         </div>
 
         <div class="card">
-            <div class="card-header">
-                標題
-            </div>
+            <div class="card-header">標題 3</div>
             <div class="card-body">
                 <!-- <h5 class="card-title">Special title treatment</h5> -->
                 <p class="card-text">
-                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                    簡述內文3 簡述內文3 簡述內文3 簡述內文3 簡述內文3 
+                    簡述內文3 簡述內文3 簡述內文3
                 </p>
                 <!-- <p class="placeholder-wave">
                 <span class="placeholder col-12"></span>
@@ -165,18 +162,17 @@
                 </button>
             </div>
             <div class="card-footer text-muted">
-                2023-02-30
+                2023.02.25
             </div>
         </div>
 
         <div class="card">
-            <div class="card-header">
-                標題
-            </div>
+            <div class="card-header">標題 4</div>
             <div class="card-body">
                 <!-- <h5 class="card-title">Special title treatment</h5> -->
                 <p class="card-text">
-                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                    簡述內文4 簡述內文4 簡述內文4 簡述內文4 簡述內文4
+                    簡述內文4 簡述內文4 簡述內文4
                 </p>
                 <!-- <p class="placeholder-wave">
                 <span class="placeholder col-12"></span>
@@ -189,7 +185,7 @@
                 </button>
             </div>
             <div class="card-footer text-muted">
-                2023-02-30
+                2023.01.30
             </div>
         </div>
 
@@ -203,18 +199,11 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
-                            <br>
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
-                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            
                         </p>
                     </div>
                     <div class="modal-footer">
-                        2023-02-30
+                        
                     </div>
                 </div>
             </div>
