--- a/views/portfolio/gaming.ejs
+++ b/views/portfolio/gaming.ejs
@@ -155,31 +155,13 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="row">
-                    <div class="col">
-                        <div class="card-body">
-                            <p class="card-text"><small class="text-muted">成長 Tone</small></p>
-                            <p class="card-text">遊戲組</p>
-
-                            <h1 class="card-title">作品名稱</h1>
-
-
-                            <a href="#" class="btn btn-primary">了解詳情</a>
-                        </div>
-                    </div>
-                    <div class="col text-end">
-                        <img src="../media/predictor.jpg" alt="...">
-                    </div>
-
-                </div>
-            </div>
         </div>
 
         <!-- 了解詳情 -->
         <div class="works_content">
             <button type="button" class="btn btn-outline-secondary btn_back">回上一頁</button>
 
+            <!-- 圖片輪播 -->
             <div id="gaming_carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#gaming_carousel" data-bs-slide-to="0" class="active"
@@ -190,13 +172,13 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active c1">
                         <img src="../media/test.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item c2">
                         <img src="../media/test2.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item c3">
                         <img src="../media/test3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
