--- a/views/home.ejs
+++ b/views/home.ejs
@@ -105,7 +105,10 @@
         </div>
         <div class="row">
             <div class="col">
-                <h1>關於成長 Tone</h1>
+                <h1>
+                    元智大學資訊傳播學系 <br> 
+                    第 26 屆畢業展覽
+                </h1>
             </div>
         </div>
         <div class="row">
@@ -120,7 +123,17 @@
         </div>
         <div class="row">
             <div class="col">
-                <h1>展覽作品</h1>
+                <h2>展覽作品</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col home_intro">
+                <p>
+                    展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
+                    展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
+                    展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
+                    展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
+                </p>
             </div>
         </div>
 
