--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,16 +2,26 @@
     background-color: blanchedalmond;
 } */
 .home_intro{
-    background-color: rgb(202, 254, 234);
-    height: 520px;
+    /* background-color: rgb(202, 254, 234); */
+    /* height: 520px; */
+    margin: 0 0 80px;
 }
 .home_intro p{
-    margin: 80px 10%;
-    border: 2px solid black;
-    text-align: center;
+    /* margin: 80px 10%; */
 }
 
 h1{
-    margin: 80px 0;
+    margin: 80px 0 80px;
+    font-size: 64px;
+}
+
+h2{
     text-align: center;
+    font-size: 48px;
+    margin: 80px 0 80px;
+}
+
+.card-title{
+    text-align: center;
+    font-size: 36px;
 }
