--- a/views/about.ejs
+++ b/views/about.ejs
@@ -111,7 +111,61 @@
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title"> 設計組 </h5>
+                
+                    <div class="row row-cols-1 row-cols-md-4">
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-5">
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-4">
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="col">
+                            <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+            
             <div class="col">
               <div class="card">
                 <img src="media/predictor.jpg" class="card-img-top" alt="...">
@@ -131,44 +185,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card">
-                <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">姓名</h5>
-                    <p class="card-text">
-                        內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹
-                    </p>
-                    <h5 class="card-title">經歷</h5>
-                    <p class="card-text">
-                        <ul>
-                            <li>經歷介紹</li>
-                            <li>經歷介紹</li>
-                            <li>經歷介紹</li>
-                        </ul>
-                    </p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">姓名</h5>
-                    <p class="card-text">
-                        內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹
-                    </p>
-                    <h5 class="card-title">經歷</h5>
-                    <p class="card-text">
-                        <ul>
-                            <li>經歷介紹</li>
-                            <li>經歷介紹</li>
-                            <li>經歷介紹</li>
-                        </ul>
-                    </p>
-                  </div>
-                </div>
-            </div>
+
         </div>
 
         <!-- 贊助夥伴 -->
