--- a/public/css/exhibition.css
+++ b/public/css/exhibition.css
@@ -3,12 +3,12 @@
     border: 1px black solid
 }
 */
-p{
+/* p{
     text-align: center;
     
-}
+} */
 
-h1{
+/* h1{
     margin: 80px 0;
     text-align: center;
-}
+} */
