--- a/views/exhibition.ejs
+++ b/views/exhibition.ejs
@@ -106,36 +106,27 @@
     <hr />
 
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md"><h1>展區導覽圖</h1></div>
-        <div class="col-md-12">
-          <img
-            src="https://jatraveling.tw/wp-content/uploads/2018/08/1533283504-799bad5a3b514f096e69bbc4a7896cd9.jpg"
-            class="img-fluid"
-            alt="..."
-          />
-        </div>
-      </div>
       <div class="row align-items-center">
         <div class="col-12">
-          <h1>交通資訊</h1>
+          <h1 class="header2">交通資訊</h1>
         </div>
-        <div class="col-8">
-          <p>
-            松山文創園區地址：11072臺北市信義區光復南路133號<br />
-            ◎捷運<br />
+        <div class="col-6">
+          <p class="text1_3">
+            地址：<br />11072臺北市信義區光復南路133號<br />
+            捷運：<br />
             搭乘捷運板南線（藍）至捷運市政府站１號出口，步行約400公尺<br />
             搭乘捷運板南線（藍）至捷運市政府站２號出口，步行約400公尺<br />
             搭乘捷運板南線（藍）至捷運國父紀念館站５號出口，步行約500公尺<br />
-            ◎自行開車<br />
-            園區內無設有停車場，停車請至松山高中或市府轉運站，更多停車資訊可至以下網頁查詢：http://www.tpis.nat.gov.tw/
+            自行開車：<br />
+            園區內無設有停車場，停車請至松山高中或市府轉運站<br />
+            更多停車資訊可至以下網頁查詢：http://www.tpis.nat.gov.tw/
           </p>
         </div>
-        <div class="col-4">
+        <div class="col-6">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6079.2023127538305!2d121.56096415201237!3d25.04373331772975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb5f15f40c3%3A0x94694552be3aa6c0!2z5Y2X5ZCR6KO96I-45bel5aC0!5e0!3m2!1szh-TW!2stw!4v1667366172066!5m2!1szh-TW!2stw"
-            width="300"
-            height="250"
+            width="100%"
+            height="500px"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
@@ -144,17 +135,70 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-12">
-          <h1>注意事項</h1>
+        <div class="col-md">
+          <h1 class="header2 text-center">展區導覽圖</h1>
         </div>
-        <div class="col-5">
-          <p>
-            1.請勿穿著短褲 洪立桓在你後面看著你<br />
-            2.加我IG:sam90315
-          </p>
+        <div class="col-md-12">
+          <img
+            src="https://jatraveling.tw/wp-content/uploads/2018/08/1533283504-799bad5a3b514f096e69bbc4a7896cd9.jpg"
+            class="img-fluid"
+            alt="..."
+          />
         </div>
       </div>
+      
+
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <h1 class="header2 text-center">注意事項</h1>
+        </div>
+        <div class="col-4">
+          <div class="row">
+            <div class="col-6">
+              <img src="media/predictor.jpg" alt="">
+            </div>
+            <div class="col-6">
+              <p>
+                <b>注意事項標題</b> <br>
+                注意事項內文
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="row">
+            <div class="col-6">
+              <img src="media/predictor.jpg" alt="">
+            </div>
+            <div class="col-6">
+              <p>
+                <b>注意事項標題</b> <br>
+                注意事項內文
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="row">
+            <div class="col-6">
+              <img src="media/predictor.jpg" alt="">
+            </div>
+            <div class="col-6">
+              <p>
+                <b>注意事項標題</b> <br>
+                注意事項內文
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
       <!-- footer -->
+
+
       <div class="row">
         <div class="col">
           <p>指導單位：<br />元智大學資訊學院</p>
