--- a/views/home.ejs
+++ b/views/home.ejs
@@ -105,15 +105,16 @@
         </div>
         <div class="row">
             <div class="col">
-                <h1>
-                    元智大學資訊傳播學系 <br> 
-                    第 26 屆畢業展覽
+                <h1 class="header1">
+                    元智大學 <br>
+                    資訊傳播學系第 26 屆 <br> 
+                    畢業展覽
                 </h1>
             </div>
         </div>
         <div class="row">
-            <div class="col home_intro">
-                <p>
+            <div class="col">
+                <p class="text1">
                     展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹
                     展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹
                     展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹展覽主題介紹
@@ -123,12 +124,12 @@
         </div>
         <div class="row">
             <div class="col">
-                <h2>展覽作品</h2>
+                <h2 class="header2 text-center">展覽作品</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col home_intro">
-                <p>
+            <div class="col">
+                <p class="text1_2">
                     展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
                     展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
                     展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹展覽作品介紹
@@ -142,7 +143,10 @@
                 <div class="card text-center">
                     <img src="media/predictor.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                       <h5 class="card-title">遊戲</h5>
+                       <h5 class="text1_3">遊戲</h5>
+                       <p class="text2">
+                        遊戲簡短敘述內文遊戲簡短敘述內文遊戲簡短敘述內文遊戲簡短敘述內文
+                       </p>
                     </div>
                 </div>
             </div>
@@ -150,7 +154,10 @@
                 <div class="card text-center">
                     <img src="media/predictor.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                       <h5 class="card-title">互動</h5>
+                       <h5 class="text1_3">互動</h5>
+                       <p class="text2">
+                        互動簡短敘述內文互動簡短敘述內文互動簡短敘述內文互動簡短敘述內文
+                       </p>
                     </div>
                 </div>
             </div>
@@ -158,7 +165,10 @@
                 <div class="card text-center">
                     <img src="media/predictor.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                       <h5 class="card-title">影視動畫</h5>
+                       <h5 class="text1_3">影視動畫</h5>
+                       <p class="text2">
+                        影視簡短敘述內文影視簡短敘述內文影視簡短敘述內文影視簡短敘述內文
+                       </p>
                     </div>
                 </div>
             </div>
@@ -166,7 +176,10 @@
                 <div class="card text-center">
                     <img src="media/predictor.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                       <h5 class="card-title">行銷</h5>
+                       <h5 class="text1_3">行銷</h5>
+                       <p class="text2">
+                        行銷簡短敘述內文行銷簡短敘述內文行銷簡短敘述內文行銷簡短敘述內文
+                       </p>
                     </div>
                 </div>
             </div>
